--- a/website/vercel.json
+++ b/website/vercel.json
@@ -1,10 +1,14 @@
 {
     "redirects": [
       {
-        "source": "/qr",
-        "destination": "https://bilibili.com",
+        "source": "/qr/video0",
+        "destination": "https://www.bilibili.com/video/BV1im411176f",
+        "statusCode": 302
+      },
+      {
+        "source": "/qr/q0",
+        "destination": "https://qm.qq.com/q/OPKO1I35qo",
         "statusCode": 302
       }
     ]
   }
-  
